--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,12 @@ i {
   cursor: pointer;
 }
 
-hr {
+.inputHr {
+  width: 96%;
+  margin-left: 9px;
+}
+
+.monthSeparatorHr {
   background: white;
   margin-top: 3px;
   margin-bottom: 3px;
@@ -45,6 +50,7 @@ p.announcementPost:hover {
 body {
 	background-color: #1DA1F2;
 	height: 100%;
+
 }
 
 button {
@@ -159,7 +165,7 @@ input.announcementInput {
 .announcementParent {
   display: flex;
   justify-content: center;
-  padding-top: 60px;
+  padding-top: 36px;
 }
 
 .announcementContainer {
@@ -228,7 +234,7 @@ input.announcementInput {
 .commentInputContainer {
   width: 90%;
   background-color: #f5f8f2;
-  padding-top: 5px;
+  padding-top: 3px;
 }
 
 .submitIcon {
@@ -242,11 +248,11 @@ p.commentSubmit:hover {
 p.commentSubmit {
   float: right;
   padding-right: 14px;
-  padding-top: 10px;
+  padding-top: 14px;
 }
 
 input.commentBox {
-  height: 100%;
+  height: 95%;
   font-size: 15px;
   padding: 8px;
   width: 60%;
@@ -268,7 +274,7 @@ input.commentBox {
 .node {
 	padding-left: 5%;
   padding-right: 5%;
-  padding-top: 60px;
+  padding-top: 38px;
 }
 
 .nodeTitle {
