--- a/src/index.css
+++ b/src/index.css
@@ -502,17 +502,22 @@ img.imageDropPreview {
 /* familyChoice */
 .familiesContainer {
   width: 100%;
-  padding: 10px;
   color: white;
+  padding-top: 60px;
 }
 .familyContainer {
   display: flex;
   align-items: center;
   padding: 10px;
+  border-bottom: 1px solid #f5f8f2;
 }
 .familyNamesContainer {
   display: inline-block;
   padding-left: 10px;
+  color: white;
+}
+.familyContainer:hover {
+  box-shadow: 1px 2px 23px #f5f8f2;
 }
 /* generalRules */
 
