--- a/src/index.css
+++ b/src/index.css
@@ -333,6 +333,62 @@ img.galleryThumbnail {
   height: 40px;
 }
 
+.trial {
+  width: 225px;
+  background-color: blue;
+  color: white;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Create Family */
+.createFamilyContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 10%;
+}
+.createFamilyName {
+  /*flex: 1;*/
+  width: 250px;
+}
+.createFamilyName input {
+  width: 100%;
+  height: 50px;
+  font-size: 18px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.createFamilyAvatar img {
+  min-width: 8%;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.createFamilyButton {
+  width: 250px;
+  height: 50px;
+  font-size: 18px;
+  background-color: blue;
+  color: white;
+  border-radius: 5px;
+  margin: auto;
+  display: block;
+  padding: 10px;
+}
+
+.createFamilyButton:hover {
+  box-shadow: 1px 2px 23px #f5f8f2;
+}
+
+
+
+
 /* Header Styling */
 
 .navButton {
@@ -448,13 +504,6 @@ p.dropZoneText {
   cursor: pointer;
 }
 
-img.imageDropPreview {
-  display: flex;
-  justify-content: center;
-  padding-top: 10%;
-  display: none;
-}
-
 /* GalleryZoomed */
 
 .zoomedPhotoContainer {
@@ -510,6 +559,11 @@ img.imageDropPreview {
   align-items: center;
   padding: 10px;
   border-bottom: 1px solid #f5f8f2;
+}
+
+.familyContainer img {
+  max-width: 5%;
+  border-radius: 50%;
 }
 .familyNamesContainer {
   display: inline-block;
