--- a/src/index.css
+++ b/src/index.css
@@ -350,7 +350,7 @@ img.galleryThumbnail {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  padding: 10%;
+  padding: 5% 10%;
 }
 .createFamilyName {
   /*flex: 1;*/
@@ -363,9 +363,12 @@ img.galleryThumbnail {
   padding: 10px;
   border-radius: 5px;
 }
-
+.createFamilyAvatar {
+  margin-bottom: 10px;
+  margin-right: 20px;
+}
 .createFamilyAvatar img {
-  min-width: 8%;
+  width: 200px;
   border-radius: 50%;
   padding: 10px;
 }
@@ -390,21 +393,32 @@ img.galleryThumbnail {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 40vw;
-  height: 50vh;
+  width: 50vw;
+  height: 570px;
   background-color: white;
   position: fixed;
   top: 5%;
-  left: 30%;
+  left: 25%;
   border: 1px gray solid;
   transition: opacity 500ms ease;
-  overflow: auto;
   z-index: 311 !important;
+  /*
+  deactivate family selection divs while
+  this modal is showing
+  */
 }
 
 .panelExitContainer {
   width: 100%;
   display: flex;
+  justify-content: flex-end;
+  padding-top: 10px;
+  /*
+  bug when dev tools at
+  bottom of screen comment
+  is pushed upwards
+  */
+
 }
 .panelExit:hover {
   color: gray;
@@ -413,18 +427,17 @@ img.galleryThumbnail {
 .panelExit {
  color: black;
  font-size: 30px;
- padding-left: 5px;
+ padding-right: 10px;
+ padding-top: 10px;
 }
 
 /* Header Styling */
 
 .navButton {
 	color: white;
-	height: 46px;
 	width: 100%;
-	position: fixed;
+	/*position: fixed;*/
 	padding: 15px;
-  z-index: 34234;
 	background-color: #323333;
 }
 
@@ -480,17 +493,9 @@ img.galleryThumbnail {
 	padding-top: 50px;
 }
 
-.uploadButton {
-	height: 50px;
-	float: right;
-	padding-bottom: 19px;
-	margin: -6px;
-}
-
 .fileUpload {
   display: flex;
   justify-content: center;
-  padding-top: 10%;
 }
 
 .xIconUpload {
@@ -515,7 +520,10 @@ input.imageDescription {
   color: #323333;
   cursor: pointer;
 }
-.imgDropText:hover {
+.dropzoneClickIcons {
+  padding-top: 10%;
+}
+.dropzoneClickIcons:hover {
   color: #EE930E;
 }
 
