--- a/src/index.css
+++ b/src/index.css
@@ -368,7 +368,8 @@ img.galleryThumbnail {
   margin-right: 20px;
 }
 .createFamilyAvatar img {
-  width: 200px;
+  width: 180px;
+  height: 180px;
   border-radius: 50%;
   padding: 10px;
 }
@@ -380,7 +381,7 @@ img.galleryThumbnail {
   background-color: blue;
   color: white;
   border-radius: 5px;
-  margin: auto;
+  margin: 10px;
   display: block;
   padding: 10px;
 }
@@ -394,7 +395,7 @@ img.galleryThumbnail {
   align-items: center;
   flex-direction: column;
   width: 50vw;
-  height: 570px;
+  height: 560px;
   background-color: white;
   position: fixed;
   top: 5%;
